<resources>
    <string name="app_name">Buzzer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="player2">2 Player</string>
    <string name="player3">3 Player</string>
    <string name="player4">4 Player</string>
    <string name="dismiss">Dismiss</string>
    <string name="reactionStats">Single User Statistics</string>
    <string name="gameStats">Game Mode Statistics</string>

    <string name="email">E-mail Statitics</string>
    <string name="instructions">Click quickly when the button says "GO!!"</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="title_activity_clicked_early">ClickedEarlyActivity</string>
    <string name="title_activity_restart_reaction">RestartReactionActivity</string>
    <string name="title_activity_display_winner">DisplayWinnerActivity</string>
    <string name="title_activity_clear_counts">ClearCountsActivity</string>
    <string name="title_activity_display_count">DisplayCountActivity</string>


</resources>

