<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="1"
        app:showAsAction="never" />

    <item
        android:id="@+id/reaction_stats"
        android:title="@string/reactionStats"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item
        android:id="@+id/game_show_stats"
        android:title="@string/gameStats"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item
        android:id="@+id/email"
        android:title="@string/email"
        android:orderInCategory="3"
        app:showAsAction="never" />
</menu>