<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.rupehra.buzzer.GameShowBuzzerActivity"
    android:onClick="clearCounts">

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radioPlayer">

        <TextView
            android:layout_width="329dp"
            android:layout_height="89dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="     Select game mode"
            android:id="@+id/selectgamemode"
            android:layout_gravity="center_horizontal"
            android:background="#7cfff8"
            android:textSize="30dp" />

        <RadioButton android:id="@+id/player2"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:text="@string/player2"
            android:checked="false" />

        <RadioButton android:id="@+id/player3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/player3"
            android:checked="false" />

        <RadioButton android:id="@+id/player4"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/player4" />


    </RadioGroup>

</RelativeLayout>
